# higgs

./: .env  README.md  docker-compose.yml
.github/workflows/: deployment.yml  integration.yml
app/: package-lock.json  package.json
app/src/: index.tsx  routes.tsx
app/src/pages/: Home.tsx  Settings.tsx
backend/: Dockerfile  README.md  pyproject.toml
backend/backend/: __init__.py
backend/backend/blueprints/health/: __init__.py
backend/backend/blueprints/restapi/: __init__.py
backend/backend/blueprints/restapi/resources/: __init__.py  transaction_one.py  transactions.py
backend/backend/services/: database.py
backend/scripts/: run.py
backend/tests/: test_backend.py  test_health.py  test_restapi.py
