[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Igor Souza <igormcsouza@gmail.com>"]

[tool.poetry.scripts]
wsgi = "scripts.run:run_wsgi_application"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
pymongo = "^3.11.3"
Flask-Cors = "^3.0.10"
Flask-JWT = "^0.3.2"
gunicorn = "^20.0.4"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
